Criando os métodos adicionar e salvarContato. Utilizando o template adicionar-contato.

--- a/src/main/resources/templates/contato.html
+++ b/src/main/resources/templates/contato.html
@@ -35,7 +35,7 @@
 			</div>
 		</div>
 		<div>
-		<a href="#">Adicionar Novo Contato</a>
+		<a th:href="@{/adicionar}">Adicionar Novo Contato</a>
 		</div>
 	</div>
 </body>
