Criando o link para cancelar adição de um novo contato.

--- a/src/main/resources/templates/adicionar-contato.html
+++ b/src/main/resources/templates/adicionar-contato.html
@@ -48,6 +48,7 @@
 				</div>
 				<div>
 					<button type="submit">Salvar</button>
+					<a th:href="@{/}">Cancelar</a>
 				</div>
 			</form>
 		</div>
