--- a/src/main/resources/templates/contato.html
+++ b/src/main/resources/templates/contato.html
@@ -29,6 +29,9 @@
 							<td th:text="${contato.telefone}"></td>
 							<td th:text="${contato.logradouro}"></td>
 							<td th:text="${contato.data}"></td>
+							<td>
+								<a th:href="@{/editar/{id}(id=${contato.id})}">Editar</a>
+							</td>
 						</tr>
 					</tbody>
 				</table>
