--- a/src/main/resources/templates/contato.html
+++ b/src/main/resources/templates/contato.html
@@ -31,6 +31,7 @@
 							<td th:text="${contato.data}"></td>
 							<td>
 								<a th:href="@{/editar/{id}(id=${contato.id})}">Editar</a>
+								<a th:href="@{/deletar/{id}(id=${contato.id})}">Deletar</a>
 							</td>
 						</tr>
 					</tbody>
